@@ -2,6 +2,7 @@
     - Changed SIR to single instance application
     - Removed setting empty dcraw path string after browse cancel
     - Fixed left arrow shortcut for previous image in PreviewDialog
+    - Removed defines.h file
 
 * unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.7.3
     - Changed all occurrences of old SIR webpage URL
